Remove unused nav categories. For now atleast

--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 <div class="topnav" id="topHighlight"></div>
 <div class="topnav" id="myTopnav">
   <a href="#home" class="active">Home</a>
-  <a href="#news">About</a>
-  <a href="#contact">Contact</a>
-  <a href="javascript:void(0);" class="icon" onclick="toggleExpand()">
+  <!-- TODO Ill do it later -->
+  <!-- <a href="#news">About</a>
+  <a href="#contact">Contact</a> -->
+  <!-- <a href="javascript:void(0);" class="icon" onclick="toggleExpand()">
     <i class="fa fa-bars"></i>
-  </a>
+  </a> -->
 </div>
 
 <div class="container">
@@ -28,7 +29,7 @@
     <p>This site will hopefully become a landing page for all of my weird upcoming projects.</p>
     <p>As you may be able to tell this site looks quite simple. This page will be a proving grounds for me to develop my web skills and learn new things.</p>
     <p>Hopefully some people find this useful. As always my public work can be found on my Github!</p>
-    <a href="https://github.com/jmalfara" class="button">Visit my github</a>
+    <a href="https://github.com/jmalfara" class="button">Visit my Github</a>
     <a href="https://www.linkedin.com/in/jordan-malfara-432aa6103/" class="button">Visit my LinkedIn</a>
   </div>
 </div>
